deploy: de56994cf7dd9dd76a81ee19097d0dd6a7dca928

--- a/navigation.html
+++ b/navigation.html
@@ -32,7 +32,7 @@
     <div class="sideMenuPart" id="kslog-nav-submenu-0-9" pageId="kslog::dev.inmo.kslog.common/KSLog///PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/-k-s-log/index.html"><span><span>KSLog</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-10" pageId="kslog::dev.inmo.kslog.common//KSLog/#kotlin.String#kotlin.collections.Set[dev.inmo.kslog.common.LogLevel]/PointingToDeclaration//1786989810">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-10" pageId="kslog::dev.inmo.kslog.common//KSLog/#kotlin.String#kotlin.collections.Iterable[dev.inmo.kslog.common.LogLevel]/PointingToDeclaration//1786989810">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/-k-s-log.html"><span><span>KSLog()</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="kslog-nav-submenu-0-11" pageId="kslog::dev.inmo.kslog.common//l/dev.inmo.kslog.common.KSLog#dev.inmo.kslog.common.LogLevel#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
@@ -68,19 +68,22 @@
     <div class="sideMenuPart" id="kslog-nav-submenu-0-15" pageId="kslog::dev.inmo.kslog.common//logTag/kotlin.Any#/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/log-tag.html"><span>log</span><wbr></wbr><span><span>Tag</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-16" pageId="kslog::dev.inmo.kslog.common//v/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-16" pageId="kslog::dev.inmo.kslog.common/TagLogger///PointingToDeclaration//788909594">
+      <div class="overview"><a href="kslog/dev.inmo.kslog.common/-tag-logger/index.html"><span>Tag</span><wbr></wbr><span><span>Logger</span></span></a></div>
+    </div>
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-17" pageId="kslog::dev.inmo.kslog.common//v/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/v.html"><span><span>v()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-17" pageId="kslog::dev.inmo.kslog.common//verbose/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-18" pageId="kslog::dev.inmo.kslog.common//verbose/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/verbose.html"><span><span>verbose()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-18" pageId="kslog::dev.inmo.kslog.common//w/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-19" pageId="kslog::dev.inmo.kslog.common//w/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/w.html"><span><span>w()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-19" pageId="kslog::dev.inmo.kslog.common//warning/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-20" pageId="kslog::dev.inmo.kslog.common//warning/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/warning.html"><span><span>warning()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-20" pageId="kslog::dev.inmo.kslog.common//wtf/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-21" pageId="kslog::dev.inmo.kslog.common//wtf/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/wtf.html"><span><span>wtf()</span></span></a></div>
     </div>
   </div>
