--- a/kslog/dev.inmo.kslog.common/-k-s-log/index.html
+++ b/kslog/dev.inmo.kslog.common/-k-s-log/index.html
@@ -31,7 +31,7 @@ if(savedDarkMode === true){
             </a>
     </div>
     <div>
-0.0.1    </div>
+0.0.2    </div>
     <div class="pull-right d-flex">
             <div class="filter-section" id="filter-section">
                     <button class="platform-tag platform-selector common-like" data-active="" data-filter=":dokkaHtml/commonMain">common</button>
@@ -112,6 +112,17 @@ if(savedDarkMode === true){
             <div class=""><span class="inline-flex">
                 <div><a href="../-callback-k-s-log/index.html">CallbackKSLog</a></div>
 <span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-672259458%2FInheritors%2F788909594"></span>
+                  <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
+                </span></span></div>
+            <div></div>
+          </div>
+        </div>
+<a data-name="-1963812437%2FInheritors%2F788909594" anchor-label="TagLogger" id="-1963812437%2FInheritors%2F788909594" data-filterable-set=":dokkaHtml/commonMain"></a>
+        <div class="table-row" data-filterable-current=":dokkaHtml/commonMain" data-filterable-set=":dokkaHtml/commonMain">
+          <div class="main-subrow keyValue ">
+            <div class=""><span class="inline-flex">
+                <div><a href="../-tag-logger/index.html">TagLogger</a></div>
+<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-1963812437%2FInheritors%2F788909594"></span>
                   <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
                 </span></span></div>
             <div></div>
