deploy: 33a0d9032fe77676f9ad84ec541d03c6065f0562

--- a/navigation.html
+++ b/navigation.html
@@ -32,70 +32,61 @@
     <div class="sideMenuPart" id="kslog-nav-submenu-0-9" pageId="kslog::dev.inmo.kslog.common//invoke/dev.inmo.kslog.common.KSLog#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String?,kotlin.String,kotlin.Throwable?,kotlin.Unit]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/invoke.html"><span><span>invoke()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-10" pageId="kslog::dev.inmo.kslog.common//KSAndroidLog/#kotlin.String#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String,kotlin.String,kotlin.Throwable?,kotlin.Boolean]/PointingToDeclaration//1837590656">
-      <div class="overview"><a href="kslog/dev.inmo.kslog.common/-k-s-android-log.html"><span>KSAndroid</span><wbr></wbr><span><span>Log()</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-11" pageId="kslog::dev.inmo.kslog.common//KSJSLog/#kotlin.String#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String,kotlin.String,kotlin.Throwable?,kotlin.String]#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String?,kotlin.String,kotlin.Throwable?,kotlin.Boolean]/PointingToDeclaration//371682492">
-      <div class="overview"><a href="kslog/dev.inmo.kslog.common/-k-s-j-s-log.html"><span><span>KSJSLog()</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-12" pageId="kslog::dev.inmo.kslog.common//KSJVMLog/#kotlin.String#java.util.logging.Logger#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String,kotlin.String,kotlin.Throwable?,kotlin.String]#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String?,kotlin.String,kotlin.Throwable?,kotlin.Boolean]/PointingToDeclaration//-879532132">
-      <div class="overview"><a href="kslog/dev.inmo.kslog.common/-k-s-j-v-m-log.html"><span><span>KSJVMLog()</span></span></a></div>
-    </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-13" pageId="kslog::dev.inmo.kslog.common/KSLog///PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-10" pageId="kslog::dev.inmo.kslog.common/KSLog///PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/-k-s-log/index.html"><span><span>KSLog</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-14" pageId="kslog::dev.inmo.kslog.common//KSLog/#kotlin.String#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String,kotlin.String,kotlin.Throwable?,kotlin.Boolean]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-11" pageId="kslog::dev.inmo.kslog.common//KSLog/#kotlin.String#kotlin.collections.Iterable[dev.inmo.kslog.common.LogLevel]#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String,kotlin.String,kotlin.Throwable?,kotlin.String]/PointingToDeclaration//1786989810">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/-k-s-log.html"><span><span>KSLog()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-15" pageId="kslog::dev.inmo.kslog.common//l/dev.inmo.kslog.common.KSLog#dev.inmo.kslog.common.LogLevel#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-12" pageId="kslog::dev.inmo.kslog.common//l/dev.inmo.kslog.common.KSLog#dev.inmo.kslog.common.LogLevel#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/l.html"><span><span>l()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-16" pageId="kslog::dev.inmo.kslog.common//log/dev.inmo.kslog.common.KSLog#dev.inmo.kslog.common.LogLevel#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-13" pageId="kslog::dev.inmo.kslog.common//log/dev.inmo.kslog.common.KSLog#dev.inmo.kslog.common.LogLevel#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/log.html"><span><span>log()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-17" pageId="kslog::dev.inmo.kslog.common//logger/kotlin.Any#/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-14" pageId="kslog::dev.inmo.kslog.common//logger/kotlin.Any#/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/logger.html"><span><span>logger</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-18" pageId="kslog::dev.inmo.kslog.common/LogLevel///PointingToDeclaration//788909594">
-      <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;kslog-nav-submenu-0-18&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="kslog/dev.inmo.kslog.common/-log-level/index.html"><span>Log</span><wbr></wbr><span><span>Level</span></span></a></div>
-      <div class="sideMenuPart" id="kslog-nav-submenu-0-18-0" pageId="kslog::dev.inmo.kslog.common/LogLevel.ASSERT///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-15" pageId="kslog::dev.inmo.kslog.common/LogLevel///PointingToDeclaration//788909594">
+      <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;kslog-nav-submenu-0-15&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="kslog/dev.inmo.kslog.common/-log-level/index.html"><span>Log</span><wbr></wbr><span><span>Level</span></span></a></div>
+      <div class="sideMenuPart" id="kslog-nav-submenu-0-15-0" pageId="kslog::dev.inmo.kslog.common/LogLevel.ASSERT///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
         <div class="overview"><a href="kslog/dev.inmo.kslog.common/-log-level/-a-s-s-e-r-t/index.html"><span><span>ASSERT</span></span></a></div>
       </div>
-      <div class="sideMenuPart" id="kslog-nav-submenu-0-18-1" pageId="kslog::dev.inmo.kslog.common/LogLevel.DEBUG///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
+      <div class="sideMenuPart" id="kslog-nav-submenu-0-15-1" pageId="kslog::dev.inmo.kslog.common/LogLevel.DEBUG///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
         <div class="overview"><a href="kslog/dev.inmo.kslog.common/-log-level/-d-e-b-u-g/index.html"><span><span>DEBUG</span></span></a></div>
       </div>
-      <div class="sideMenuPart" id="kslog-nav-submenu-0-18-2" pageId="kslog::dev.inmo.kslog.common/LogLevel.ERROR///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
+      <div class="sideMenuPart" id="kslog-nav-submenu-0-15-2" pageId="kslog::dev.inmo.kslog.common/LogLevel.ERROR///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
         <div class="overview"><a href="kslog/dev.inmo.kslog.common/-log-level/-e-r-r-o-r/index.html"><span><span>ERROR</span></span></a></div>
       </div>
-      <div class="sideMenuPart" id="kslog-nav-submenu-0-18-3" pageId="kslog::dev.inmo.kslog.common/LogLevel.INFO///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
+      <div class="sideMenuPart" id="kslog-nav-submenu-0-15-3" pageId="kslog::dev.inmo.kslog.common/LogLevel.INFO///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
         <div class="overview"><a href="kslog/dev.inmo.kslog.common/-log-level/-i-n-f-o/index.html"><span><span>INFO</span></span></a></div>
       </div>
-      <div class="sideMenuPart" id="kslog-nav-submenu-0-18-4" pageId="kslog::dev.inmo.kslog.common/LogLevel.VERBOSE///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
+      <div class="sideMenuPart" id="kslog-nav-submenu-0-15-4" pageId="kslog::dev.inmo.kslog.common/LogLevel.VERBOSE///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
         <div class="overview"><a href="kslog/dev.inmo.kslog.common/-log-level/-v-e-r-b-o-s-e/index.html"><span><span>VERBOSE</span></span></a></div>
       </div>
-      <div class="sideMenuPart" id="kslog-nav-submenu-0-18-5" pageId="kslog::dev.inmo.kslog.common/LogLevel.WARNING///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
+      <div class="sideMenuPart" id="kslog-nav-submenu-0-15-5" pageId="kslog::dev.inmo.kslog.common/LogLevel.WARNING///PointingToDeclaration/{&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;:{&quot;key&quot;:&quot;org.jetbrains.dokka.links.EnumEntryDRIExtra&quot;}}/788909594">
         <div class="overview"><a href="kslog/dev.inmo.kslog.common/-log-level/-w-a-r-n-i-n-g/index.html"><span><span>WARNING</span></span></a></div>
       </div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-19" pageId="kslog::dev.inmo.kslog.common//logTag/kotlin.Any#/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-16" pageId="kslog::dev.inmo.kslog.common//logTag/kotlin.Any#/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/log-tag.html"><span>log</span><wbr></wbr><span><span>Tag</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-20" pageId="kslog::dev.inmo.kslog.common/TagLogger///PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-17" pageId="kslog::dev.inmo.kslog.common/TagLogger///PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/-tag-logger/index.html"><span>Tag</span><wbr></wbr><span><span>Logger</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-21" pageId="kslog::dev.inmo.kslog.common//v/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-18" pageId="kslog::dev.inmo.kslog.common//v/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/v.html"><span><span>v()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-22" pageId="kslog::dev.inmo.kslog.common//verbose/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-19" pageId="kslog::dev.inmo.kslog.common//verbose/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/verbose.html"><span><span>verbose()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-23" pageId="kslog::dev.inmo.kslog.common//w/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-20" pageId="kslog::dev.inmo.kslog.common//w/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/w.html"><span><span>w()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-24" pageId="kslog::dev.inmo.kslog.common//warning/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-21" pageId="kslog::dev.inmo.kslog.common//warning/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/warning.html"><span><span>warning()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-25" pageId="kslog::dev.inmo.kslog.common//wtf/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-22" pageId="kslog::dev.inmo.kslog.common//wtf/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/wtf.html"><span><span>wtf()</span></span></a></div>
     </div>
   </div>
