--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@ if(savedDarkMode === true){
             </a>
     </div>
     <div>
-0.2.0    </div>
+0.3.0    </div>
     <div class="pull-right d-flex">
             <div class="filter-section" id="filter-section">
-                    <button class="platform-tag platform-selector jvm-like" data-active="" data-filter=":dokkaHtml/androidMain">android</button>
                     <button class="platform-tag platform-selector common-like" data-active="" data-filter=":dokkaHtml/commonMain">common</button>
-                    <button class="platform-tag platform-selector js-like" data-active="" data-filter=":dokkaHtml/jsMain">js</button>
                     <button class="platform-tag platform-selector jvm-like" data-active="" data-filter=":dokkaHtml/jvmMain">jvm</button>
             </div>
         <button id="theme-toggle-button"><span id="theme-toggle"></span></button>
@@ -48,26 +46,24 @@ if(savedDarkMode === true){
         <div id="sideMenu"></div>
     </div>
     <div id="main">
-<div class="main-content" id="content" pageIds="kslog::////PointingToDeclaration//1786989810">
+<div class="main-content" id="content" pageIds="kslog::////PointingToDeclaration//995916586">
   <div class="breadcrumbs"></div>
   <div class="cover ">
     <h1 class="cover"><span><span>kslog</span></span></h1>
   </div>
   <h2 class="">Packages</h2>
-  <div class="table"><a data-name="-542453811%2FPackages%2F1786989810" anchor-label="dev.inmo.kslog.common" id="-542453811%2FPackages%2F1786989810" data-filterable-set=":dokkaHtml/androidMain :dokkaHtml/commonMain :dokkaHtml/jsMain :dokkaHtml/jvmMain"></a>
-    <div class="table-row" data-filterable-current=":dokkaHtml/androidMain :dokkaHtml/commonMain :dokkaHtml/jsMain :dokkaHtml/jvmMain" data-filterable-set=":dokkaHtml/androidMain :dokkaHtml/commonMain :dokkaHtml/jsMain :dokkaHtml/jvmMain">
+  <div class="table"><a data-name="-542453811%2FPackages%2F995916586" anchor-label="dev.inmo.kslog.common" id="-542453811%2FPackages%2F995916586" data-filterable-set=":dokkaHtml/commonMain :dokkaHtml/jvmMain"></a>
+    <div class="table-row" data-filterable-current=":dokkaHtml/commonMain :dokkaHtml/jvmMain" data-filterable-set=":dokkaHtml/commonMain :dokkaHtml/jvmMain">
       <div>
         <div class="main-subrow ">
           <div class=""><span class="inline-flex">
               <div><a href="kslog/dev.inmo.kslog.common/index.html">dev.inmo.kslog.common</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-542453811%2FPackages%2F1786989810"></span>
+<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-542453811%2FPackages%2F995916586"></span>
                 <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
               </span></span></div>
           <div class="pull-right">
             <div class="platform-tags no-gutters">
-              <div class="platform-tag jvm-like">android</div>
               <div class="platform-tag common-like">common</div>
-              <div class="platform-tag js-like">js</div>
               <div class="platform-tag jvm-like">jvm</div>
             </div>
           </div>
