deploy: a0982dbd830b03bdfda6cb5ef000cc9e5794e3a5

--- a/navigation.html
+++ b/navigation.html
@@ -2,22 +2,22 @@
   <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;kslog-nav-submenu&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="index.html"><span><span>kslog</span></span></a></div>
   <div class="sideMenuPart" id="kslog-nav-submenu-0" pageId="kslog::dev.inmo.kslog.common////PointingToDeclaration//995916586">
     <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;kslog-nav-submenu-0&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="kslog/dev.inmo.kslog.common/index.html"><span>dev.</span><wbr></wbr><span>inmo.</span><wbr></wbr><span>kslog.</span><wbr></wbr><span>common</span></a></div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-0" pageId="kslog::dev.inmo.kslog.common//assert/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-0" pageId="kslog::dev.inmo.kslog.common//assert/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/assert.html"><span><span>assert()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-1" pageId="kslog::dev.inmo.kslog.common//assertS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-1" pageId="kslog::dev.inmo.kslog.common//assertS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/assert-s.html"><span>assert</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="kslog-nav-submenu-0-2" pageId="kslog::dev.inmo.kslog.common/CallbackKSLog///PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/-callback-k-s-log/index.html"><span>Callback</span><wbr></wbr><span><span>KSLog</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-3" pageId="kslog::dev.inmo.kslog.common//d/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-3" pageId="kslog::dev.inmo.kslog.common//d/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/d.html"><span><span>d()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-4" pageId="kslog::dev.inmo.kslog.common//debug/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-4" pageId="kslog::dev.inmo.kslog.common//debug/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/debug.html"><span><span>debug()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-5" pageId="kslog::dev.inmo.kslog.common//debugS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-5" pageId="kslog::dev.inmo.kslog.common//debugS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/debug-s.html"><span>debug</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="kslog-nav-submenu-0-6" pageId="kslog::dev.inmo.kslog.common/DefaultKSLog///PointingToDeclaration//788909594">
@@ -26,34 +26,34 @@
     <div class="sideMenuPart" id="kslog-nav-submenu-0-7" pageId="kslog::dev.inmo.kslog.common//defaultMessageFormatter/#/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/default-message-formatter.html"><span>default</span><wbr></wbr><span>Message</span><wbr></wbr><span><span>Formatter</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-8" pageId="kslog::dev.inmo.kslog.common//dS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-8" pageId="kslog::dev.inmo.kslog.common//dS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/d-s.html"><span>d</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-9" pageId="kslog::dev.inmo.kslog.common//e/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-9" pageId="kslog::dev.inmo.kslog.common//e/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/e.html"><span><span>e()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-10" pageId="kslog::dev.inmo.kslog.common//error/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-10" pageId="kslog::dev.inmo.kslog.common//error/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/error.html"><span><span>error()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-11" pageId="kslog::dev.inmo.kslog.common//errorS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-11" pageId="kslog::dev.inmo.kslog.common//errorS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/error-s.html"><span>error</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-12" pageId="kslog::dev.inmo.kslog.common//eS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-12" pageId="kslog::dev.inmo.kslog.common//eS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/e-s.html"><span>e</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-13" pageId="kslog::dev.inmo.kslog.common//i/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-13" pageId="kslog::dev.inmo.kslog.common//i/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/i.html"><span><span>i()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-14" pageId="kslog::dev.inmo.kslog.common//info/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-14" pageId="kslog::dev.inmo.kslog.common//info/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/info.html"><span><span>info()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-15" pageId="kslog::dev.inmo.kslog.common//infoS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-15" pageId="kslog::dev.inmo.kslog.common//infoS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/info-s.html"><span>info</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="kslog-nav-submenu-0-16" pageId="kslog::dev.inmo.kslog.common//invoke/dev.inmo.kslog.common.KSLog#kotlin.Function4[dev.inmo.kslog.common.LogLevel,kotlin.String?,kotlin.String,kotlin.Throwable?,kotlin.Unit]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/invoke.html"><span><span>invoke()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-17" pageId="kslog::dev.inmo.kslog.common//iS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-17" pageId="kslog::dev.inmo.kslog.common//iS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/i-s.html"><span>i</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
     <div class="sideMenuPart" id="kslog-nav-submenu-0-18" pageId="kslog::dev.inmo.kslog.common/KSLog///PointingToDeclaration//788909594">
@@ -104,34 +104,34 @@
     <div class="sideMenuPart" id="kslog-nav-submenu-0-27" pageId="kslog::dev.inmo.kslog.common/TagLogger///PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/-tag-logger/index.html"><span>Tag</span><wbr></wbr><span><span>Logger</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-28" pageId="kslog::dev.inmo.kslog.common//v/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-28" pageId="kslog::dev.inmo.kslog.common//v/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/v.html"><span><span>v()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-29" pageId="kslog::dev.inmo.kslog.common//verbose/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-29" pageId="kslog::dev.inmo.kslog.common//verbose/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/verbose.html"><span><span>verbose()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-30" pageId="kslog::dev.inmo.kslog.common//verboseS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-30" pageId="kslog::dev.inmo.kslog.common//verboseS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/verbose-s.html"><span>verbose</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-31" pageId="kslog::dev.inmo.kslog.common//vS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-31" pageId="kslog::dev.inmo.kslog.common//vS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/v-s.html"><span>v</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-32" pageId="kslog::dev.inmo.kslog.common//w/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-32" pageId="kslog::dev.inmo.kslog.common//w/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/w.html"><span><span>w()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-33" pageId="kslog::dev.inmo.kslog.common//warning/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-33" pageId="kslog::dev.inmo.kslog.common//warning/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/warning.html"><span><span>warning()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-34" pageId="kslog::dev.inmo.kslog.common//warningS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-34" pageId="kslog::dev.inmo.kslog.common//warningS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/warning-s.html"><span>warning</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-35" pageId="kslog::dev.inmo.kslog.common//wS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-35" pageId="kslog::dev.inmo.kslog.common//wS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/w-s.html"><span>w</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-36" pageId="kslog::dev.inmo.kslog.common//wtf/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-36" pageId="kslog::dev.inmo.kslog.common//wtf/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.Function0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/wtf.html"><span><span>wtf()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="kslog-nav-submenu-0-37" pageId="kslog::dev.inmo.kslog.common//wtfS/dev.inmo.kslog.common.KSLog#kotlin.String?#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
+    <div class="sideMenuPart" id="kslog-nav-submenu-0-37" pageId="kslog::dev.inmo.kslog.common//wtfS/dev.inmo.kslog.common.KSLog#kotlin.Throwable?#kotlin.coroutines.SuspendFunction0[kotlin.String]/PointingToDeclaration//788909594">
       <div class="overview"><a href="kslog/dev.inmo.kslog.common/wtf-s.html"><span>wtf</span><wbr></wbr><span><span>S()</span></span></a></div>
     </div>
   </div>
