--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ if(savedDarkMode === true){
             </a>
     </div>
     <div>
-0.3.2    </div>
+0.4.0    </div>
     <div class="pull-right d-flex">
             <div class="filter-section" id="filter-section">
                     <button class="platform-tag platform-selector common-like" data-active="" data-filter=":dokkaHtml/commonMain">common</button>
@@ -65,6 +65,42 @@ if(savedDarkMode === true){
             <div class="platform-tags no-gutters">
               <div class="platform-tag common-like">common</div>
               <div class="platform-tag jvm-like">jvm</div>
+            </div>
+          </div>
+        </div>
+        <div></div>
+      </div>
+    </div>
+<a data-name="-2131328707%2FPackages%2F788909594" anchor-label="dev.inmo.kslog.common.filter" id="-2131328707%2FPackages%2F788909594" data-filterable-set=":dokkaHtml/commonMain"></a>
+    <div class="table-row" data-filterable-current=":dokkaHtml/commonMain" data-filterable-set=":dokkaHtml/commonMain">
+      <div>
+        <div class="main-subrow ">
+          <div class=""><span class="inline-flex">
+              <div><a href="kslog/dev.inmo.kslog.common.filter/index.html">dev.inmo.kslog.common.filter</a></div>
+<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-2131328707%2FPackages%2F788909594"></span>
+                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
+              </span></span></div>
+          <div class="pull-right">
+            <div class="platform-tags no-gutters">
+              <div class="platform-tag common-like">common</div>
+            </div>
+          </div>
+        </div>
+        <div></div>
+      </div>
+    </div>
+<a data-name="-1327729271%2FPackages%2F788909594" anchor-label="dev.inmo.kslog.common.typed" id="-1327729271%2FPackages%2F788909594" data-filterable-set=":dokkaHtml/commonMain"></a>
+    <div class="table-row" data-filterable-current=":dokkaHtml/commonMain" data-filterable-set=":dokkaHtml/commonMain">
+      <div>
+        <div class="main-subrow ">
+          <div class=""><span class="inline-flex">
+              <div><a href="kslog/dev.inmo.kslog.common.typed/index.html">dev.inmo.kslog.common.typed</a></div>
+<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-1327729271%2FPackages%2F788909594"></span>
+                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
+              </span></span></div>
+          <div class="pull-right">
+            <div class="platform-tags no-gutters">
+              <div class="platform-tag common-like">common</div>
             </div>
           </div>
         </div>
