deploy: deba12ed5dd5010f855c1c9586781d3140a4dedc

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <h1 class="cover"><span><span>kslog</span></span></h1>
   </div>
   <h2 class="">Packages</h2>
-  <div class="table"><a data-name="-542453811%2FPackages%2F995916586" anchor-label="dev.inmo.kslog.common" id="-542453811%2FPackages%2F995916586" data-filterable-set=":dokkaHtml/commonMain :dokkaHtml/jvmMain"></a>
-    <div class="table-row" data-filterable-current=":dokkaHtml/commonMain :dokkaHtml/jvmMain" data-filterable-set=":dokkaHtml/commonMain :dokkaHtml/jvmMain">
+  <div class="table"><a data-name="-542453811%2FPackages%2F995916586" anchor-label="dev.inmo.kslog.common" id="-542453811%2FPackages%2F995916586" data-filterable-set=":dokkaHtml/commonMain,:dokkaHtml/jvmMain"></a>
+    <div class="table-row" data-filterable-current=":dokkaHtml/commonMain,:dokkaHtml/jvmMain" data-filterable-set=":dokkaHtml/commonMain,:dokkaHtml/jvmMain">
       <div>
         <div class="main-subrow ">
           <div class=""><span class="inline-flex">
